--- a/index.html
+++ b/index.html
@@ -9,15 +9,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1> Welcome to</h1>
-            <h1> <span class="name-highlight"> Md.Abdullah's </span>  Kingdom </h1>
+            <h1> <span class="orange-highlight"> Md.Abdullah's </span>  Kingdom </h1>
             <h3> World class professional Web-devloper </h3>
             <p> Most importantly, don’t sweat it too much. Don’t worry about picking the wrong language or learning the wrong thing.As a new developer, you’re not expected to know everything before you get started.Just start coding and see where your passion takes you!</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-abdullah-654a64201/"> Hire me</a>
         </div>
         <div class="half-width">
             <img src="images/profile.jpg" alt="">
+        </div>
+    </section>
+    
+    <section class="Dream-Area">
+        <div class="half-width">
+            <img src="images/picture.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3> Become a Googlar </h3>
+            <p> My Dream  job Google . It’s a steep climb, though; there’s a ton of competition, and Google can have its pick of the talent pool. But there are key details in its jobs data that might just help me land my dream job at on of its campuses worldwide.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/mdabdullah.hridoy.9/"> Visite my facebook</a>
+
+        </div>
+    </section class="experience-area">
+    <h2> Experiences </h2>
+    <section>
+        <div id= full-stack class="half-width singal-experience">
+            <h2> Full Stack Web Developer</h2>
+            <h3 class="orange-highlight"> 2021 - Present | Pro level Web Devloper</h3>
+            <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id=baby-web class="half-width singal-experience" >
+            <h2> Baby Web Developer</h2>
+            <h3 class="orange-highlight"> 2020-2021 | Programming Hero Learner </h3>
+            <p> They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
         </div>
     </section>
 </body>
