--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/mdabdullah.hridoy.9/"> Visite my facebook</a>
 
         </div>
-    </section class="experience-area">
-    <h2> Experiences </h2>
-    <section>
+        </section>
+    <section class="Experience-Area">
+    
+        <h2> Experiences </h2>
         <div id= full-stack class="half-width singal-experience">
             <h2> Full Stack Web Developer</h2>
             <h3 class="orange-highlight"> 2021 - Present | Pro level Web Devloper</h3>
