--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-abdullah-654a64201/"> Hire me</a>
         </div>
         <div class="half-width">
-            <img src="images/profile.jpg" alt="">
+            <img src="images/profile.png" alt="">
         </div>
     </section>
     
     <section class="Dream-Area">
         <div class="half-width">
-            <img src="images/picture.jpg" alt="">
+            <img src="images/picture.png" alt="">
         </div>
         <div class="half-width">
             <h2>Big Dream</h2>
